style.css
:root{
	--bgcolor: DarkSeaGreen;
	--fontcolor: #F0EFEC;
	--fonthighlightgreen: #57714F;
	--linkcolor: DeepPink;
	--fonthighlightorange: #da866e;
}

nav a, footer div a{
	margin:18px 1px;
	color: var(--fonthighlightgreen);
	text-decoration: none;
	font-family: "GlacialIndifferenceBold";
	font-weight: heavy;
	font-size: 25px;
	white-space: nowrap;
}

a:link, a:visited {
  color: var(--fonthighlightgreen);
  text-decoration: none;
}

a:hover, a:active {
  color: var(--fonthighlightorange);
  text-decoration: none;
}

footer{
	margin-top:40px;
	padding-top: 100px;
	text-align: center;
	font-size: 12px;
}

body{
	font-family: "GlacialIndifferenceRegular";
	color: var(--fontcolor);
	margin: auto;
	padding-top: 18px;
	padding-bottom: 18px;
	padding-right: 18px;
	padding-left: 18px;
	max-width: 35%;
	font-size: 20px;
	text-align: left;
	background-color: var(--bgcolor);
	background-image: url('./background3.jpg');
 	background-attachment: relative;
 	background-size: 100% auto;

}
@media only screen and (max-width: 600px) {
  body {
  	font-family: "EB Garamond";
	color: var(--fontcolor);
	margin: auto;
	padding-top: 18px;
	padding-bottom: 18px;
	padding-right: 18px;
	padding-left: 18px;
	max-width: 85%;
	font-size: 18px;
	text-align: left;
	background-color: var(--bgcolor);
	background-image: url('./background3.jpg');
 	background-attachment: relative;
 	background-size: 100% auto;
  }
}

nav{
	font-family: "Abril Fatface";
}
h1{
	font-family: "Abril Fatface";
	font-weight: 100;
	color: var(--fontcolor);
	font-size: 40px;
}

h2{
	font-family: "Abril Fatface";
	font-weight: 100;
	color: var(--fontcolor);
	font-size: 30px;
}

div.relative{
	position: relative;
	left 60;
}

img, video{
	max-width: 600px;
	border: 5px solid var(--fonthighlightgreen);
	border-radius: 20px;
}

.responsive {
  width: 100%;
  height: auto;
}

